<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinpadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/enter_the_pin_code"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtPin"
            android:layout_width="match_parent"
            android:text=""
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/txtAmount"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/txtPtc"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="170dp"
            android:columnCount="3">

            <Button android:id="@+id/btnKey1"
                android:text="@string/_1"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnKey2"
                android:text="@string/_2"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnKey3"
                android:text="@string/_3"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnKey4"
                android:text="@string/_4"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnKey5"
                android:text="@string/_5"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnKey6"
                android:text="@string/_6"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnKey7"
                android:text="@string/_7"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnKey8"
                android:text="@string/_8"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnKey9"
                android:text="@string/_9"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnReset"
                android:text="@string/clear"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnKey0"
                android:text="@string/_0"
                android:onClick="keyClick"
                style="@style/PadButton" />

            <Button android:id="@+id/btnOK"
                android:text="@string/ok_text"
                android:onClick="keyClick"
                style="@style/PadButton"/>

        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>